--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "build": "gulp compile"
+    "start": "gulp"
   },
   "author": "",
   "license": "ISC"
