--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "glob": "^5.0.14",
     "gulp-compile-handlebars": "^0.5.0",
     "gulp-concat": "^2.6.0",
+    "gulp-cssmin": "^0.1.7",
+    "gulp-gzip": "^1.2.0",
+    "gulp-htmlmin": "^1.1.3",
+    "gulp-s3": "^0.3.0",
     "gulp-sass": "^2.0.4",
     "gulp-server-livereload": "^1.4.0",
     "gulp-sourcemaps": "^1.5.2",
