--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "babel": "^5.8.21",
+    "babel-core": "^5.8.22",
     "glob": "^5.0.14",
     "gulp-compile-handlebars": "^0.5.0",
     "gulp-concat": "^2.6.0",
