--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "moment": "^2.10.6"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\"",
     "start": "gulp",
     "deploy": "gulp build && gulp deploy",
     "update": "gulp repos && gulp build && gulp deploy"
