--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "main": "gulpfile.babel.js",
   "dependencies": {
     "bootstrap-sass": "^3.3.5",
-    "github-api": "^0.10.6",
-    "gulp": "^3.9.0",
-    "lodash": "^3.10.1"
+    "webpack-zepto": "0.0.1"
   },
   "devDependencies": {
     "babel": "^5.8.21",
     "babel-core": "^5.8.22",
+    "babel-loader": "^5.3.2",
+    "babelify": "^6.1.3",
+    "browserify": "^11.0.1",
+    "github-api": "^0.10.6",
     "glob": "^5.0.14",
+    "gulp": "^3.9.0",
+    "gulp-babel": "^5.2.0",
     "gulp-compile-handlebars": "^0.5.0",
     "gulp-concat": "^2.6.0",
     "gulp-cssmin": "^0.1.7",
@@ -23,6 +27,8 @@
     "gulp-server-livereload": "^1.4.0",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-watch": "^4.3.4",
+    "gulp-webpack": "^1.5.0",
+    "lodash": "^3.10.1",
     "moment": "^2.10.6"
   },
   "scripts": {
