--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-cssmin": "^0.1.7",
     "gulp-gzip": "^1.2.0",
     "gulp-htmlmin": "^1.1.3",
+    "gulp-inline-source": "^2.1.0",
     "gulp-s3": "^0.3.0",
     "gulp-sass": "^2.0.4",
     "gulp-server-livereload": "^1.4.0",
