--- a/package.json
+++ b/package.json
@@ -11,27 +11,24 @@
   "devDependencies": {
     "babel": "^5.8.21",
     "babel-core": "^5.8.22",
-    "babel-loader": "^5.3.2",
-    "babelify": "^6.1.3",
-    "browserify": "^11.0.1",
     "github-api": "^0.10.6",
     "glob": "^5.0.14",
     "gulp": "^3.9.0",
     "gulp-babel": "^5.2.0",
     "gulp-compile-handlebars": "^0.5.0",
-    "gulp-concat": "^2.6.0",
     "gulp-cssmin": "^0.1.7",
     "gulp-gzip": "^1.2.0",
     "gulp-htmlmin": "^1.1.3",
     "gulp-inline-source": "^2.1.0",
+    "gulp-rename": "^1.2.2",
     "gulp-s3": "^0.3.0",
     "gulp-sass": "^2.0.4",
     "gulp-server-livereload": "^1.4.0",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-watch": "^4.3.4",
-    "gulp-webpack": "^1.5.0",
     "lodash": "^3.10.1",
-    "moment": "^2.10.6"
+    "moment": "^2.10.6",
+    "webpack-stream": "^2.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\"",
