--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lodash": "^3.10.1",
     "moment": "^2.10.6",
     "webpack-stream": "^2.1.0"
+    "yargs": "^3.19.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\"",
