--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-htmlmin": "^1.1.3",
     "gulp-inline-source": "^2.1.0",
     "gulp-rename": "^1.2.2",
+    "gulp-rimraf": "^0.1.1",
     "gulp-s3": "^0.3.0",
     "gulp-sass": "^2.0.4",
     "gulp-server-livereload": "^1.4.0",
