--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "webpack-zepto": "0.0.1"
   },
   "devDependencies": {
-    "babel": "^5.8.21",
     "babel-core": "^5.8.22",
+    "babel-loader": "^5.3.2",
     "github-api": "^0.10.6",
     "glob": "^5.0.14",
     "gulp": "^3.9.0",
