--- a/package.json
+++ b/package.json
@@ -15,28 +15,31 @@
     "webpack-zepto": "0.0.1"
   },
   "devDependencies": {
-    "babel-core": "^5.8.22",
-    "babel-loader": "^5.3.2",
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.20.0",
+    "babel-loader": "^6.2.10",
+    "babel-plugin-transform-class-properties": "^6.19.0",
+    "babel-plugin-transform-react-jsx": "^6.8.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-runtime": "^6.20.0",
+    "css-loader": "^0.26.1",
+    "date-fns": "^1.21.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "github-api": "^0.10.6",
     "glob": "^5.0.14",
-    "gulp": "^3.9.0",
-    "gulp-compile-handlebars": "^0.5.0",
-    "gulp-cssmin": "^0.1.7",
-    "gulp-gzip": "^1.2.0",
-    "gulp-htmlmin": "^1.1.3",
-    "gulp-inline-source": "^2.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-rimraf": "^0.1.1",
-    "gulp-s3": "^0.3.0",
-    "gulp-sass": "^2.0.4",
-    "gulp-server-livereload": "^1.4.0",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-watch": "^4.3.5",
     "lodash": "^3.10.1",
-    "moment": "^2.10.6",
+    "node-sass": "^4.0.0",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
     "run-sequence": "^1.1.2",
-    "webpack-stream": "^2.1.0",
-    "yargs": "^3.19.0"
+    "sass-loader": "^4.1.0",
+    "static-site-generator-webpack-plugin": "^3.1.0",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2",
+    "webpack-stream": "^2.1.0"
   },
   "author": "nicinabox",
   "license": "MIT"
