--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\"",
     "start": "webpack-dev-server",
     "build": "webpack -p",
-    "deploy": "surge -p build",
+    "clean": "mkdir -p build && rm -rf build/*",
+    "deploy": "node tasks deploy",
     "update": "npm run repos && npm run build && npm run deploy",
     "repos": "node tasks repos"
   },
@@ -37,6 +38,7 @@
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "run-sequence": "^1.1.2",
+    "s3": "^4.4.0",
     "sass-loader": "^4.1.0",
     "static-site-generator-webpack-plugin": "^3.1.0",
     "style-loader": "^0.13.1",
