--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "babel-register": "^6.18.0",
     "babel-runtime": "^6.20.0",
     "css-loader": "^0.26.1",
     "date-fns": "^1.21.0",
