--- a/circle.yml
+++ b/circle.yml
@@ -2,6 +2,8 @@ machine:
   node:
     version: 6.1.0
 
-test:
-  post:
-    - npm run update
+deployment:
+  production:
+    branch: master
+    commands:
+      - npm run update
