--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,13 @@
 version: 2
 jobs:
   build:
+    machine: true
     node:
       version: 6.1.0
 
-  steps:
-    - deploy:
-        production:
-          branch: master
-          commands:
-            - npm run update
+    steps:
+      - deploy:
+          production:
+            branch: master
+            commands:
+              - npm run update
