--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,8 @@
 version: 2
 jobs:
   build:
-    machine: true
-    node:
-      version: 6.1.0
+    docker:
+      - image: circleci/node:6-browsers
 
     steps:
       - deploy:
