--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "nicinabox",
   "version": "2.0.0",
   "description": "",
-  "main": "gulpfile.babel.js",
   "scripts": {
     "test": "echo \"Error: no test specified\"",
     "start": "webpack-dev-server",
@@ -13,32 +12,32 @@
     "repos": "node tasks repos"
   },
   "dependencies": {
-    "bootstrap-sass": "^3.3.5",
+    "bootstrap-sass": "^3.3.7",
     "fastclick": "^1.0.6",
     "webpack-zepto": "0.0.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.20.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-class-properties": "^6.19.0",
     "babel-plugin-transform-react-jsx": "^6.8.0",
-    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
-    "babel-register": "^6.18.0",
-    "babel-runtime": "^6.20.0",
+    "babel-register": "^6.26.0",
+    "babel-runtime": "^6.26.0",
     "css-loader": "^0.26.1",
-    "date-fns": "^1.21.0",
+    "date-fns": "^1.29.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "github-api": "^2.3.0",
-    "glob": "^7.1.1",
-    "lodash": "^4.17.2",
-    "node-sass": "^4.0.0",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
-    "run-sequence": "^1.1.2",
+    "glob": "^7.1.2",
+    "lodash": "^4.17.10",
+    "node-sass": "^4.9.0",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
+    "run-sequence": "^1.2.2",
     "s3": "^4.4.0",
     "sass-loader": "^4.1.0",
     "static-site-generator-webpack-plugin": "^3.1.0",
