--- a/package.json
+++ b/package.json
@@ -4,19 +4,21 @@
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\"",
-    "start": "webpack-dev-server",
+    "start": "npx @11ty/eleventy --serve",
     "build": "webpack -p",
     "clean": "mkdir -p build && rm -rf build/*",
     "deploy": "node tasks deploy",
     "update": "npm run repos && npm run build && npm run deploy",
-    "repos": "node tasks repos"
+    "data": "node tasks data"
   },
   "dependencies": {
     "bootstrap-sass": "^3.3.7",
     "fastclick": "^1.0.6",
+    "mustache": "^4.0.1",
     "webpack-zepto": "0.0.1"
   },
   "devDependencies": {
+    "@11ty/eleventy": "^0.11.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^6.2.10",
@@ -33,6 +35,7 @@
     "file-loader": "^0.9.0",
     "github-api": "^2.3.0",
     "glob": "^7.1.2",
+    "handlebars": "^4.7.6",
     "lodash": "^4.17.10",
     "node-sass": "^4.9.0",
     "react": "^15.6.2",
